--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-spring/web": "^10.0.3",
     "@tanstack/react-query": "^5.83.0",
+    "@vercel/analytics": "^1.6.1",
     "apexcharts": "^5.3.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
